@@ -9,8 +9,6 @@ version          = 2.07
 :version      = 2.45
 release_tests = 1
 travis_status = 1
-installer     = ModuleBuild
-mb_class      = My::ModuleBuild
 
 [RemovePrereqs]
 
@@ -33,6 +31,7 @@ remove = File::Basename
 
 [Prereqs / Configure]
 -phase = configure
+ExtUtils::MakeMaker = 7.12
 Alien::Base::Wrapper = 1.02
 Alien::Libarchive    = 0.28
 ExtUtils::CChecker   = 0
